Receive bearer token JWT (#33)
