# src/websites/kitchencalm/endpoints/get-shopping-list/get-shopping-list-definition.ts
@@ -12,9 +12,6 @@ export const getShoppingListRoute = createRoute({
   security: [{ bearerAuth: [] }],
   middleware: [jwtAuthMiddleware],
   request: {
-    headers: z.object({
-      authorization: z.string().describe('Bearer token with JWT'),
-    }),
     query: z.object({
       startDate: z
         .string()
