# src/websites/kitchencalm/endpoints/s3-put-signed-url/s3-put-signed-url-definition.ts
@@ -11,9 +11,6 @@ export const s3PutSignedUrlRoute = createRoute({
   security: [{ bearerAuth: [] }],
   middleware: [jwtAuthMiddleware],
   request: {
-    headers: z.object({
-      authorization: z.string().describe('Bearer token with JWT'),
-    }),
     body: {
       content: {
         'application/json': {
